jumping authentication to Blog App In MERN

--- a/auth_simple_01/client/src/index.css
+++ b/auth_simple_01/client/src/index.css
@@ -1,6 +1,8 @@
-*{
+@import "tailwindcss";
+/* *{
     background-color: gray;
-}
+} */
+
 .dardMode{
     color: white;
     background-color: green;
@@ -12,3 +14,4 @@
     color: black;
     background-color: blue;
 }
+
